# DataPilot-AI

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
dashboard/: app.py
data/: sample_data.csv
src/: __init__.py  ai_insights.py  automl.py  data_generator.py  data_preprocessing.py  eda.py  explainability.py  ml_models.py  report_generator.py  time_series.py  visualization.py
tests/: __init__.py  test_automl.py  test_eda.py  test_preprocessing.py
