# ===========================================
# 🧠 DataPilot AI - Project Configuration
# ===========================================
# Modern Python project configuration using pyproject.toml
# PEP 517, PEP 518, PEP 621 compliant

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapilot-ai"
version = "1.0.0"
description = "🧠 Your Intelligent Data Analysis Copilot - AutoML, Explainable AI, Time Series Forecasting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Vivek Ghantiwala", email = "vivekghantiwala14@gmail.com"}
]
maintainers = [
    {name = "Vivek Ghantiwala", email = "vivekghantiwala14@gmail.com"}
]
keywords = [
    "machine-learning",
    "automl",
    "data-analysis",
    "data-science",
    "explainable-ai",
    "shap",
    "lime",
    "time-series",
    "eda",
    "visualization",
    "streamlit",
    "scikit-learn",
    "xgboost",
    "lightgbm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "streamlit>=1.25.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "shap>=0.42.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = [
    "datapilot-ai[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/VivekGhantiwala/DataPilot-AI"
Documentation = "https://github.com/VivekGhantiwala/DataPilot-AI#readme"
Repository = "https://github.com/VivekGhantiwala/DataPilot-AI.git"
Issues = "https://github.com/VivekGhantiwala/DataPilot-AI/issues"
Changelog = "https://github.com/VivekGhantiwala/DataPilot-AI/blob/main/CHANGELOG.md"

[project.scripts]
datapilot = "cli:main"

# ===========================================
# 🛠️ Tool Configurations
# ===========================================

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "dashboard*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json", "*.yaml", "*.yml"]

# ===========================================
# 🎨 Black - Code Formatter
# ===========================================
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

# ===========================================
# 📦 isort - Import Sorter
# ===========================================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/venv/**", "**/.venv/**"]
known_first_party = ["src", "dashboard"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ===========================================
# 🧪 pytest - Testing
# ===========================================
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ===========================================
# 📊 Coverage
# ===========================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 70
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ===========================================
# 🔍 mypy - Type Checking
# ===========================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
]

# ===========================================
# 🧹 Ruff - Fast Linter (Alternative to Flake8)
# ===========================================
[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
